--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8" />
 	<title>Aqua: Water Tracker</title>
 
-	<meta name="description" content="My Page Description" />
+	<meta name="description" content="Aqua: Water Tracker IOS App landing page" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="assets/icone/App Icon Aqua DM Blue.png" />
 
-	<meta property="og:title" content="My Page Title" />
-	<meta property="og:description" content="My Page Description" />
+	<meta property="og:title" content="Aqua: Water Tracker" />
+	<meta property="og:description" content="Aqua: Water Tracker IOS App landing page" />
 	<meta property="og:image" content="assets/og-image.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
