--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 </header>
 <div class="app__buttons app__buttons--mobile container">
-	<a href="https://www.apple.com/ios/app-store/" class="app__button-ios" target="_blank" title="Get on Appstore">
+	<a href="https://apps.apple.com/us/app/aqua-water-tracker/id6448118299" class="app__button-ios" target="_blank" title="Get on Appstore">
 		<img src="assets/ios-badge.svg" alt="Get on Appstore">
 	</a>
 </div>
