--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<h1 class="app__name">Aqua : Water Tracker</h1>
 		<p class="app__description">Track your water intake with Aqua</p>
 		<div class="app__buttons app__buttons--desktop">
-			<a href="https://www.apple.com/ios/app-store/" class="app__button-ios" target="_blank" title="Get on Appstore">
+			<a href="https://apps.apple.com/us/app/aqua-water-tracker/id6448118299" class="app__button-ios" target="_blank" title="Get on Appstore">
 				<img src="assets/ios-badge.svg" alt="Get on Appstore">
 			</a>
 		</div>
