--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
 	</div>
 	<div class="app__screenshots-wrapper container-desktop">
 		<div class="app__screenshots-list">
-			<a href="assets/screen/1.png" class="lightbox">
-				<img src="assets/screen/1.png" class="app__screenshot" alt="" />
+			<a href="assets/screen/1.jpg" class="lightbox">
+				<img src="assets/screen/1.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screen/2.png" class="lightbox">
-				<img src="assets/screen/2.png" class="app__screenshot" alt="" />
+			<a href="assets/screen/2.jpg" class="lightbox">
+				<img src="assets/screen/2.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screen/4.png" class="lightbox">
-				<img src="assets/screen/4.png" class="app__screenshot" alt="" />
+			<a href="assets/screen/4.jpg" class="lightbox">
+				<img src="assets/screen/4.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screen/6.png" class="lightbox">
-				<img src="assets/screen/6.png" class="app__screenshot" alt="" />
+			<a href="assets/screen/6.jpg" class="lightbox">
+				<img src="assets/screen/6.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screen/7.png" class="lightbox">
-				<img src="assets/screen/7.png" class="app__screenshot" alt="" />
+			<a href="assets/screen/7.jpg" class="lightbox">
+				<img src="assets/screen/7.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screen/8.png" class="lightbox">
-				<img src="assets/screen/8.png" class="app__screenshot" alt="" />
+			<a href="assets/screen/8.jpg" class="lightbox">
+				<img src="assets/screen/8.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screen/9.png" class="lightbox">
-				<img src="assets/screen/9.png" class="app__screenshot" alt="" />
+			<a href="assets/screen/9.jpg" class="lightbox">
+				<img src="assets/screen/9.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screen/10.png" class="lightbox">
-				<img src="assets/screen/10.png" class="app__screenshot" alt="" />
+			<a href="assets/screen/10.jpg" class="lightbox">
+				<img src="assets/screen/10.jpg" class="app__screenshot" alt="" />
 			</a>
 		</div>
 	</div>
